--- a/index.html
+++ b/index.html
@@ -219,18 +219,89 @@
           <img src="images/product category/ipad.png" alt="Yellow Tablet" />
         </div>
         <div class="promo-content">
-          <h1>New Arrival</h1>
+          <h1>New Arrivals</h1>
           <h2>Sunshine Ipad</h2>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac
             est vitae ipsum faucibus placerat. Cras fermentum mattis laoreet.
-            Etiam sollicitudin mauris quam, eu auctor nisi condimentum et. Fusce
-            suscipit pulvinar nibh a aliquam.
           </p>
-          <button class="white-button">SHOP NOW</button>
+          <div>
+            <button class="white-button">SHOP NOW</button>
+          </div>
         </div>
       </div>
     </div>
     <!-- END OF IPAD PROMO -->
+
+    <!-- FOOTER -->
+    <footer>
+      <div id="footer-top">
+        <img
+          src="images/elife_logo.png"
+          alt="elife logo"
+          width="220px"
+          height="110px"
+        />
+        <div id="footer-socials-wrapper">
+          <div class="footer-social">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="40"
+              height="40"
+              fill="currentColor"
+              class="bi bi-telephone-fill"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z"
+              />
+            </svg>
+            <span>012 345 6789</span>
+          </div>
+          <div class="footer-social">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="40"
+              height="40"
+              fill="currentColor"
+              class="bi bi-telegram"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8.287 5.906q-1.168.486-4.666 2.01-.567.225-.595.442c-.03.243.275.339.69.47l.175.055c.408.133.958.288 1.243.294q.39.01.868-.32 3.269-2.206 3.374-2.23c.05-.012.12-.026.166.016s.042.12.037.141c-.03.129-1.227 1.241-1.846 1.817-.193.18-.33.307-.358.336a8 8 0 0 1-.188.186c-.38.366-.664.64.015 1.088.327.216.589.393.85.571.284.194.568.387.936.629q.14.092.27.187c.331.236.63.448.997.414.214-.02.435-.22.547-.82.265-1.417.786-4.486.906-5.751a1.4 1.4 0 0 0-.013-.315.34.34 0 0 0-.114-.217.53.53 0 0 0-.31-.093c-.3.005-.763.166-2.984 1.09"
+              />
+            </svg>
+            <span>Telegram</span>
+          </div>
+          <div class="footer-social">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="40"
+              height="40"
+              fill="currentColor"
+              class="bi bi-twitter-x"
+              viewBox="0 0 16 16"
+            >
+              <path
+                d="M12.6.75h2.454l-5.36 6.142L16 15.25h-4.937l-3.867-5.07-4.425 5.07H.316l5.733-6.57L0 .75h5.063l3.495 4.633L12.601.75Zm-.86 13.028h1.36L4.323 2.145H2.865z"
+              />
+            </svg>
+            <span>Twitter</span>
+          </div>
+        </div>
+      </div>
+      <div id="footer-bottom">
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">Services</a></li>
+          <li><a href="#">About</a></li>
+        </ul>
+        <p>Copyright &copy;2024 Elife. All right reserved.</p>
+      </div>
+    </footer>
+    <!-- END OF FOOTER -->
   </body>
+  <script src="scripts.js"></script>
 </html>
